# ReproAgent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  memory.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adding-frameworks.md  architecture.md  roadmap.md  security.md
examples/pytorch-classification/: README.md
repro_agent/: __init__.py  cli.py  config.py  orchestrator.py
repro_agent/agents/: __init__.py  artifact_auditor.py  candidate_adapter.py  environment_builder.py  execution_agent.py  paper_analyzer.py  repair_agent.py  repository_inspector.py  result_verifier.py
repro_agent/reporting/: report_builder.py
repro_agent/sandbox/: __init__.py  executor.py  policies.py  resource_limits.py
repro_agent/schemas/: adapter.py  audit.py  common.py  environment.py  execution.py  experiment.py  paper.py  report.py  research.py  validator.py
repro_agent/schemas/json/: __init__.py  artifact-audit.json  audit.json  baseline-plan.json  candidate-adapter.json  command-audit.json  common.json  comparison-plan.json  environment-audit.json  environment-plan.json
repro_agent/tools/: artifact_discovery.py  code_search.py  command_validator.py  dependency_tools.py  docker_tools.py  git_tools.py  metric_extractor.py  pdf_parser.py  yaml_tools.py
tests/fixtures/: paper.txt
tests/fixtures/sample_candidate_repo/: README.md  evaluate.py
tests/unit/: test_artifact_auditor.py  test_candidate_adapter.py  test_cli.py  test_environment_planning.py  test_metric_extractor.py  test_orchestrator.py  test_paper_analyzer.py  test_repository_inspector.py  test_research_workflows.py  test_schema_validation.py
(+4 files in other folders)
