[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repro-agent"
version = "0.2.0"
description = "Evidence-backed research auditing, baseline preparation, and comparison planning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ReproAgent Contributors" }]
dependencies = [
    "jsonschema>=4.0",
    "referencing>=0.30",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
repro-agent = "repro_agent.cli:main"

[tool.setuptools.packages.find]
include = ["repro_agent*"]

[tool.setuptools.package-data]
"repro_agent.schemas.json" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=repro_agent --cov-report=term-missing"
